Fix theme not being applied to html (fixes wrong scrollbar color in chrome)

--- a/ngafid-frontend/src/app/index.css
+++ b/ngafid-frontend/src/app/index.css
@@ -221,3 +221,7 @@
 }
 
 @custom-variant hover (&:hover);
+
+html { color-scheme: light; }
+html.dark { color-scheme: dark; }
+.page-content { color-scheme: inherit; }
